# ActivityWatch_iPad_sync_import

./: .gitignore  config.example.json  delete_activitywatch_buckets.bat  main.py  pyproject.toml
ios_activitywatch_importer/: __init__.py  activitywatch_client.py  cli.py  config.py  filesystem.py  importer.py  screen_time.py
tests/: test_activitywatch_client.py  test_config.py  test_filesystem.py  test_importer.py  test_screen_time.py
