[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ios-activitywatch-importer"
version = "0.1.0"
description = "Import iOS Screen Time data from iTunes backups into ActivityWatch."
requires-python = ">=3.11"
dependencies = [
  "iphone-backup-decrypt>=0.9.0",
]

[tool.setuptools]
packages = ["ios_activitywatch_importer"]
